--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu Project</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="title">Our Menu</div>
+    <div class="underline"></div>
+    <div class="menu-items">
+        <div class="item">
+            <img src="./images/item-1.jpeg" alt="food">
+            <div class="item-top">
+                <div class="item-title">Buttermilk Pancakes</div>
+                <div class="item-price">$15</div>
+            </div>
+            <div class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestias distinctio esse laborum nobis in animi delectus ex quam earum.</div>
+        </div>
+    </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
