--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body>
     <div class="title">Our Menu</div>
     <div class="underline"></div>
+    <!-- all items -->
     <div class="menu-items">
+        <!-- single item -->
         <div class="item">
             <img src="./images/item-1.jpeg" alt="food">
             <div class="item-top">
@@ -23,7 +25,9 @@
             </div>
             <div class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestias distinctio esse laborum nobis in animi delectus ex quam earum.</div>
         </div>
+        <!-- end of single item -->
     </div>
+    <!-- end of all items -->
     <script src="./app.js"></script>
   </body>
 </html>
