add grid, fixed style

--- a/index.html
+++ b/index.html
@@ -16,16 +16,22 @@
     <div class="underline"></div>
     <!-- all items -->
     <div class="menu-items">
-        <!-- single item -->
-        <div class="item">
-            <img src="./images/item-1.jpeg" alt="food">
-            <div class="item-top">
-                <div class="item-title">Buttermilk Pancakes</div>
-                <div class="item-price">$15</div>
-            </div>
-            <div class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestias distinctio esse laborum nobis in animi delectus ex quam earum.</div>
+      <!-- single item -->
+      <div class="item">
+        <img src="./images/item-1.jpeg" alt="food" />
+        <div class="right-desc">
+          <div class="item-top">
+            <div class="item-title">Buttermilk Pancakes</div>
+            <div class="item-price">$15</div>
+          </div>
+          <div class="item-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+            molestias distinctio esse laborum nobis in animi delectus ex quam
+            earum.
+          </div>
         </div>
-        <!-- end of single item -->
+      </div>
+      <!-- end of single item -->
     </div>
     <!-- end of all items -->
     <script src="./app.js"></script>
