--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   <body>
     <div class="title">Our Menu</div>
     <div class="underline"></div>
+    <!-- filter buttons -->
+    <div class="buttons-container">
+      <button class="filter-btn" type="button">All</button>
+      <button class="filter-btn" type="button">Breakfast</button>
+      <button class="filter-btn" type="button">Lunch</button>
+      <button class="filter-btn" type="button">Shakes</button>
+    </div>
     <!-- all items -->
     <div class="menu-items">
       <!-- single item -->
